--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<p>Data Science | Research | Image Processing</p>
+								<p>Data Science &#183; Research &#183; Image Processing</p>
 							</div>
 						</div>
 						<nav>
