--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<p>Data Science <span>&#183;</span> Research <span>&#183;</span> Image Processing</p>
+								<p>Data Science · Research · Image Processing</p>
 							</div>
 						</div>
 						<nav>
