--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="contact-form-handler.php">
+								<form method="post" action="contact-form.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
