--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about-me">About Me</a></li>
+								<li><a href="#interests">Interests</a></li>
 								<li><a href="#skills">Skills</a></li>
+								<li><a href="#projects">Projects</a></li>
 								<li><a href="#experience">Experience</a></li>
 								<li><a href="#education">Education</a></li>
-								<li><a href="#projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -45,13 +45,17 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- About Me -->
-							<article id="about-me">
-								<h2 class="major">About Me</h2>
+						<!-- Interests -->
+							<article id="interests">
+								<h2 class="major">Interests</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<div align="justify"> 
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#projects">projects</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p></div>
+								<p><blockquote>I believe the future brings decision making based on data science.</blockquote> That's why my focus is set on data science applications in 2 areas of interest:</p>
+								<h4>Sustainable Cities</h4>
+								<p>Urban Mobility. Check out my <a href="#projects">projects</a>.</p>
+								<h4>Healthcare Diagnostics</h4>
+								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p>
+								</div>
 							</article>
 
 						<!-- Skills -->
@@ -61,6 +65,14 @@
 								<div align="justify"> 
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p></div>
+							</article>
+						
+						<!-- Projects -->
+							<article id="projects">
+								<h2 class="major">Projects</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<div align="justify"> 
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
 							</article>
 
 						<!-- Experience -->
@@ -74,14 +86,6 @@
 						<!-- Education -->
 							<article id="education">
 								<h2 class="major">Education</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<div align="justify"> 
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
-							</article>
-						
-						<!-- Projects -->
-							<article id="projects">
-								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<div align="justify"> 
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
