--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
 						<!-- Interests -->
 							<article id="interests">
 								<h2 class="major">Interests</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<div align="justify"> 
 								<p><blockquote>I believe the future brings decision making based on data science.</blockquote> That's why my focus is set on data science applications in 2 areas of interest:</p>
-								<h4>Sustainable Cities</h4>
+								<h3>Sustainable Cities</h3>
 								<p>Urban Mobility. Check out my <a href="#projects">projects</a>.</p>
-								<h4>Healthcare Diagnostics</h4>
+								<h3>Healthcare Diagnostics</h3>
 								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p>
 								</div>
 							</article>
@@ -61,10 +60,14 @@
 						<!-- Skills -->
 							<article id="skills">
 								<h2 class="major">Skills</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<div align="justify"> 
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p></div>
+								<ul>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+								</ul>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								</div>
 							</article>
 						
 						<!-- Projects -->
