--- a/index.html
+++ b/index.html
@@ -61,10 +61,30 @@
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<div align="justify"> 
+								<h3>Data Science related skills</h3>
 								<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
+										<li>Data Cleaning</li>
+										<li>Exploratory Data Analysis</li>
+										<li>Statistical Analysis</li>
+								</ul>
+								<h3>Tools and Technologies</h3>
+								<ul>
+										<li>Python</li>
+										<li>Matlab</li>
+										<li>Jupyter</li>
+								</ul>
+								<h3>Soft Skills</h3>
+								<ul>
+										<li>Teamwork</li>
+										<li>Active Learning</li>
+										<li>Communication Skills</li>
+								</ul>
+								<h3>Spoken Languages</h3>
+								<ul>
+										<li>Croatian · mother tongue</li>
+										<li>English · C1</li>
+										<li>Italian · B1</li>
+										<li>Spanish · B1</li>
 								</ul>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 								</div>
