--- a/index.html
+++ b/index.html
@@ -61,23 +61,28 @@
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<div align="justify"> 
-								<h3>Data Science related skills</h3>
+								<h3>Hard Skills</h3>
 								<ul>
-										<li>Data Cleaning</li>
-										<li>Exploratory Data Analysis</li>
-										<li>Statistical Analysis</li>
+										<li>Programming · Statistics</li>
+										<li>Data Cleaning · Data Visualization</li>
+										<li>Data Analysis</li>
+										<li>Predictive Modeling · Machine Learning</li>
+										<li>Image Processing · Deep Learning</li>
+										<li>Project Management</li>
 								</ul>
 								<h3>Tools and Technologies</h3>
 								<ul>
-										<li>Python</li>
-										<li>Matlab</li>
-										<li>Jupyter</li>
+										<li>Python · Matlab · Jupyter</li>
+										<li>Pandas · NumPy · Matplotlib · Seaborn</li>
+										<li>Scikit-learn · Statsmodels · SciPy</li>
+										<li>Tensorflow · Keras</li>
+										<li>OSMnx</li>
 								</ul>
 								<h3>Soft Skills</h3>
 								<ul>
-										<li>Teamwork</li>
-										<li>Active Learning</li>
-										<li>Communication Skills</li>
+										<li>Collaboration</li>
+										<li>Active Learning · Creative Thinking</li>
+										<li>Communication · Problem Solving</li>
 								</ul>
 								<h3>Spoken Languages</h3>
 								<ul>
@@ -86,7 +91,6 @@
 										<li>Italian · B1</li>
 										<li>Spanish · B1</li>
 								</ul>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 								</div>
 							</article>
 						
