--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Marina K. 2020 Design: <a href="https://html5up.net">HTML5 UP</a><i class="fa fa-creative-commons" aria-hidden="true"></i></p>
+						<p class="copyright">&copy; Marina K. 2020 Design: <a href="https://html5up.net">HTML5 UP &#x1f16d;</p>
 					</footer>
 
 			</div>
