--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Marina K. 2020 Design: <a href="https://html5up.net">HTML5 UP</a>. CC BY 3.0</p>
+						<p class="copyright">&copy; Marina K. 2020 Design: <a href="https://html5up.net">HTML5 UP</a>. CC BY 3.0  
+							<img src="https://mirrors.creativecommons.org/presskit/buttons/80x15/png/by.png" alt="CC"> </p>
 					</footer>
 
 			</div>
