--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Marina K. 2020 Design: <a href="https://html5up.net">HTML5 UP</a>. CC BY 3.0  
-							<img src="https://mirrors.creativecommons.org/presskit/buttons/80x15/png/by.png" alt="CC"> </p>
+							<img src="https://mirrors.creativecommons.org/presskit/buttons/80x15/png/by.png" alt="CC" width="80" height="15"> </p>
 					</footer>
 
 			</div>
