--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
 							<article id="education">
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<div align="justify">
 								<h3>M.Sc in Information and Communication Technology</h3>
-								<p>Urban Mobility. Check out my <a href="#projects">projects</a>.</p>
+								<div align="justify">
+								<p>Urban Mobility. Check out my <a href="#projects">projects</a>.</p></div>
 								<h3>B.Sc in Electrical Engineering and Information Technology</h3>
-								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
+								<div align="justify">
+								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p></div>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
 						<!-- Contact -->
