--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
 							<article id="education">
 								<h2 class="major">Education</h2>
 								<h3>M.Sc in Information and Communication Technology • 2019</h3>
-								<b>Faculty of Electrical Engineering and Computing, Univeristy of Zagreb</b>
+								<h4>Module: Information Processing</h4>
+								<b>Faculty of Electrical Engineering and Computing, University of Zagreb</b>
 								<div align="justify">
-								<p>Urban Mobility.</p></div>
+								<p>Master Thesis: "Deep Neural Networks for Image Color Correction"</p></div>
 								<h3>B.Sc in Electrical Engineering and Information Technology • 2015</h3>
-								<b>Faculty of Electrical Engineering and Computing, Univeristy of Zagreb</b>
+								<h4>Module: Electronics</h4>
+								<b>Faculty of Electrical Engineering and Computing, University of Zagreb</b>
 								<div align="justify">
 								<p>Medical Image Processing.</p></div>
 							</article>
