--- a/index.html
+++ b/index.html
@@ -63,33 +63,29 @@
 								<div align="justify">
 								<h3>Hard Skills</h3>
 								<ul>
-										<li>Programming · Statistics</li>
-										<li>Data Cleaning · Data Visualization</li>
-										<li>Data Analysis</li>
-										<li>Predictive Modeling · Machine Learning</li>
-										<li>Image Processing · Deep Learning</li>
+										<li>Programming, Statistics</li>
+										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling</li>
+										<li>Machine Learning, Deep Learning</li>
+										<li>Image Processing and Analysis</li>
 										<li>Project Management</li>
 								</ul>
 								<h3>Tools and Technologies</h3>
 								<ul>
-										<li>Python · Matlab · Jupyter</li>
-										<li>Pandas · NumPy · Matplotlib · Seaborn</li>
-										<li>Scikit-learn · Statsmodels · SciPy</li>
-										<li>Tensorflow · Keras</li>
+										<li>Python (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy)</li>
+										<li>Matlab</li>
+										<li>Tensorflow, Keras</li>
 										<li>OSMnx</li>
 								</ul>
 								<h3>Soft Skills</h3>
 								<ul>
-										<li>Collaboration</li>
-										<li>Active Learning · Creative Thinking</li>
-										<li>Communication · Problem Solving</li>
+										<li>Collaboration, Active Learning, Creative Thinking, Communication, Problem Solving</li>
 								</ul>
 								<h3>Spoken Languages</h3>
 								<ul>
-										<li>Croatian · mother tongue</li>
-										<li>English · C1</li>
-										<li>Italian · B1</li>
-										<li>Spanish · B1</li>
+										<li>Croatian • mother tongue</li>
+										<li>English • C1</li>
+										<li>Italian • B1</li>
+										<li>Spanish • B1</li>
 								</ul>
 								</div>
 							</article>
@@ -97,7 +93,6 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<div align="justify"> 
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
 							</article>
