--- a/index.html
+++ b/index.html
@@ -63,18 +63,11 @@
 								<div align="justify">
 								<h3>Hard Skills</h3>
 								<ul>
-										<li>Programming, Statistics</li>
-										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling</li>
-										<li>Machine Learning, Deep Learning</li>
+										<li>Programming, Statistics (Python, Matlab)</li>
+										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy, OSMnx, GeoPandas)</li>
+										<li>Machine Learning, Deep Learning (Tensorflow, Keras)</li>
 										<li>Image Processing and Analysis</li>
 										<li>Project Management</li>
-								</ul>
-								<h3>Tools and Technologies</h3>
-								<ul>
-										<li>Python (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy)</li>
-										<li>Matlab</li>
-										<li>Tensorflow, Keras</li>
-										<li>OSMnx</li>
 								</ul>
 								<h3>Soft Skills</h3>
 								<ul>
