--- a/index.html
+++ b/index.html
@@ -63,15 +63,21 @@
 								<div align="justify">
 								<h3>Hard Skills</h3>
 								<ul>
-										<li>Programming, Statistics (Python, Matlab)</li>
-										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy, OSMnx, GeoPandas)</li>
-										<li>Machine Learning, Deep Learning (Tensorflow, Keras)</li>
+										<li>Programming, Statistics</li>
+										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling</li>
+										<li>Machine Learning, Deep Learning</li>
 										<li>Image Processing and Analysis</li>
 										<li>Project Management</li>
 								</ul>
+								<h3>Programming Languages, Tools, Packages</h3>
+								<ul>
+										<li>Python (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy, OSMnx, GeoPandas), Matlab</li>
+										<li>Tensorflow, Keras</li>
+								</ul>
 								<h3>Soft Skills</h3>
 								<ul>
-										<li>Collaboration, Active Learning, Creative Thinking, Communication, Problem Solving</li>
+										<li>Collaboration, Communication, Problem Solving</li>
+										<li>Active Learning, Creative Thinking</li>
 								</ul>
 								<h3>Spoken Languages</h3>
 								<ul>
