--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<h3>Data Science · Research · Image Processing</h3>
-								<p>Urban Mobility · Medical Imaging</p>
+								<h3>Data Scientist · Researcher · Image Processing Engineer</h3>
+								<p>Urban Sustainability · AI for Healthcare</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#interests">Interests</a></li>
+								<li><a href="#about">Interests</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#experience">Experience</a></li>
-								<li><a href="#education">Education</a></li>
+								<!--<li><a href="#experience">Experience</a></li>-->
+								<!--<li><a href="#education">Education</a></li>-->
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -47,7 +47,7 @@
 
 						<!-- Interests -->
 							<article id="interests">
-								<h2 class="major">Interests</h2>
+								<h2 class="major">About</h2>
 								<div align="justify"> 
 								<p><blockquote>I believe the future brings decision making based on data science.</blockquote> That's why my focus is set on data science applications in 2 areas of interest:</p>
 								<h3>Sustainable Cities</h3>
@@ -83,7 +83,7 @@
 								<ul>
 										<li>Croatian • mother tongue</li>
 										<li>English • C1</li>
-										<li>Italian • B1</li>
+										<li>Italian • C1</li>
 										<li>Spanish • B1</li>
 								</ul>
 								</div>
