--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">Interests</a></li>
+								<li><a href="#about">About</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<!--<li><a href="#experience">Experience</a></li>-->
@@ -391,7 +391,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Marina K. 2020 | Design: <a href="https://html5up.net">HTML5 UP</a>. | CC BY 3.0 </p>
+						<p class="copyright">&copy; Marina K. 2024 | Design: <a href="https://html5up.net">HTML5 UP</a>. | CC BY 3.0 </p>
 					</footer>
 
 			</div>
