--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div id="main">
 
 						<!-- Interests -->
-							<article id="interests">
+							<article id="about">
 								<h2 class="major">About</h2>
 								<div align="justify"> 
 								<p><blockquote>I believe the future brings decision making based on data science.</blockquote> That's why my focus is set on data science applications in 2 areas of interest:</p>
@@ -69,15 +69,18 @@
 										<li>Image Processing and Analysis</li>
 										<li>Project Management</li>
 								</ul>
-								<h3>Programming Languages, Tools, Packages</h3>
+								<h3>Programming Languages, Tools, Frameworks, Packages</h3>
 								<ul>
 										<li>Python (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy, OSMnx, GeoPandas), Matlab</li>
 										<li>Tensorflow, Keras</li>
+										<li>GIS</li>
+										<li>Power BI</li>
+
 								</ul>
 								<h3>Soft Skills</h3>
 								<ul>
 										<li>Collaboration, Communication, Problem Solving</li>
-										<li>Active Learning, Creative Thinking</li>
+										<li>Active Learning, Creative Thinking, Attention to Detail</li>
 								</ul>
 								<h3>Spoken Languages</h3>
 								<ul>
@@ -138,9 +141,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
+									<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+									<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
@@ -203,9 +206,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
+										<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+										<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
