--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-file-alt"></span>
+							<!--<span class="icon fa-file-alt"></span>-->
+							<img src="https://github.com/klnmrn/klnmrn.github.io/blob/master/images/Marina.png" alt="my avatar">
 						</div>
 						<div class="content">
 							<div class="inner">
