--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<div class="logo">
 							<!--<span class="icon fa-file-alt"></span>-->
-							<img src="https://github.com/klnmrn/klnmrn.github.io/blob/master/images/Marina.png" alt="my avatar">
+							<img src="https://github.com/klnmrn/klnmrn.github.io/blob/master/images/Marina.png">
 						</div>
 						<div class="content">
 							<div class="inner">
