--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="#">
+									<form method="post" action="contact-form-handler.php">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
@@ -395,7 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Marina K. 2024 | Design: <a href="https://html5up.net">HTML5 UP</a>. | CC BY 3.0 </p>
+						<p class="copyright">&copy; KLNMRN 2024 | Design: <a href="https://html5up.net">HTML5 UP</a>. | CC BY 3.0 </p>
 					</footer>
 
 			</div>
