--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="contact-form-handler.php">
+									<form method="post" action="/contact-form-handler.php">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
