--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="contact-form-handler.php">
+								<!--<form method="post" action="contact-form-handler.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -140,7 +140,9 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form>-->
+								<div align="justify">
+								<p>Get in touch!</p></div>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
 									<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
