--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
 									</ul>
 								</form>-->
 								<div align="justify">
-								<p>Get in touch!</p></div>
+								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
+								<b>get in touch either via my email or LinkedIN!</b></p></div>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
+									<li><a href="mailto:mrnkln@outlook.com" class="icon brands fa-envelope"><span class="label">email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
 									<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 									<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
 								</ul>
 							</article>
 
