--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<div class="inner">
 								<h1>Marina K.</h1>
 								<h3>Data Scientist · Researcher · Image Processing Engineer</h3>
-								<p>Urban Sustainability · AI for Healthcare</p>
+								<p>Working in Urban Mobility and Sustainability field · Hopping to also work on AI for Healthcare</p>
 							</div>
 						</div>
 						<nav>
@@ -145,7 +145,7 @@
 								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
 								<b>get in touch either via my email or LinkedIN!</b></p></div>
 								<ul class="icons">
-									<li><a href="mailto:mrnkln@outlook.com" class="icon brands fa-envelope"><span class="label">email</span></a></li>
+									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
 									<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 									<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
