--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<h3>Data Scientist · Researcher · Image Processing Engineer</h3>
-								<p>Working in Urban Mobility and Sustainability field · Hopping to also work on AI for Healthcare</p>
+								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
+								<p>Currently in Urban Mobility and Sustainability field · Hopping to extend also to AI for Healthcare</p>
 							</div>
 						</div>
 						<nav>
