--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#skills">Skills</a></li>
+								<!--<li><a href="#skills">Skills</a></li>-->
 								<li><a href="#projects">Projects</a></li>
 								<!--<li><a href="#experience">Experience</a></li>-->
 								<!--<li><a href="#education">Education</a></li>-->
@@ -58,7 +58,7 @@
 								</div>
 							</article>
 
-						<!-- Skills -->
+						<!-- Skills
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<div align="justify">
@@ -91,7 +91,7 @@
 										<li>Spanish • B1</li>
 								</ul>
 								</div>
-							</article>
+							</article> -->
 						
 						<!-- Projects -->
 							<article id="projects">
