--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Marina K. | Data Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="shortcut icon" type="image/png" href="images/Marina.png"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/project-gallery.css">
 		<link rel="stylesheet" href="assets/css/modal.css">
