--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<div class="project-gallery">
 
 									<div class="project-thumbnail" onclick="openModal('project1')">
-									<img src="path/to/project1/thumbnail.jpg" alt="Project 1 thumbnail">
+									<img src="https://github.com/klnmrn/urbanroadsafety/blob/main/figures/regression_hmap.png" alt="Project 1 thumbnail">
 									</div>
 									
 									<div class="project-thumbnail" onclick="openModal('project2')">
@@ -142,37 +142,13 @@
 						<!-- Education -->
 							<article id="education">
 								<h2 class="major">Education</h2>
-								<h3>M.Sc in Information and Communication Technology • Information Processing • 2019</h3>
-								<b>Faculty of Electrical Engineering and Computing, University of Zagreb</b>
 								<div align="justify">
-								<p>Master Thesis: "Deep Neural Networks for Image Color Correction"</p></div>
-								<h3>B.Sc in Electrical Engineering and Information Technology • Electronics • 2015</h3>
-								<b>Faculty of Electrical Engineering and Computing, University of Zagreb</b>
+								<p></p></div>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<!--<form method="post" action="contact-form-handler.php">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>-->
 								<div align="justify">
 								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
 								<b>get in touch either via my email or LinkedIN!</b></p></div>
@@ -397,6 +373,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<a id="modal-link2" href="" target="_blank">Link 2</a>
 				</div>
 			</div>
+
+			<div id="modal-background" class="modal-background"></div>
 
 		<!-- BG -->
 			<div id="bg"></div>
