--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<!--<li><a href="#skills">Skills</a></li>-->
 								<li><a href="#projects">Projects</a></li>
-								<!--<li><a href="#experience">Experience</a></li>-->
-								<!--<li><a href="#education">Education</a></li>-->
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -50,7 +47,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Interests -->
+						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div align="justify"> 
@@ -61,41 +58,6 @@
 								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p>
 								</div>
 							</article>
-
-						<!-- Skills
-							<article id="skills">
-								<h2 class="major">Skills</h2>
-								<div align="justify">
-								<h3>Hard Skills</h3>
-								<ul>
-										<li>Programming, Statistics</li>
-										<li>Data Cleaning, Data Visualization, Data Analysis, Predictive Modeling</li>
-										<li>Machine Learning, Deep Learning</li>
-										<li>Image Processing and Analysis</li>
-										<li>Project Management</li>
-								</ul>
-								<h3>Programming Languages, Tools, Frameworks, Packages</h3>
-								<ul>
-										<li>Python (Jupyter, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Statsmodels, SciPy, OSMnx, GeoPandas), Matlab</li>
-										<li>Tensorflow, Keras</li>
-										<li>GIS</li>
-										<li>Power BI</li>
-
-								</ul>
-								<h3>Soft Skills</h3>
-								<ul>
-										<li>Collaboration, Communication, Problem Solving</li>
-										<li>Active Learning, Creative Thinking, Attention to Detail</li>
-								</ul>
-								<h3>Spoken Languages</h3>
-								<ul>
-										<li>Croatian • mother tongue</li>
-										<li>English • C1</li>
-										<li>Italian • C1</li>
-										<li>Spanish • B1</li>
-								</ul>
-								</div>
-							</article> -->
 						
 						<!-- Projects -->
 							<article id="projects">
@@ -165,20 +127,6 @@
 								</div>
 							</article>
 
-						<!-- Experience -->
-							<article id="experience">
-								<h2 class="major">Experience</h2>
-								<div align="justify"> 
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p></div>
-							</article>
-						
-						<!-- Education -->
-							<article id="education">
-								<h2 class="major">Education</h2>
-								<div align="justify">
-								<p></p></div>
-							</article>
-
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
@@ -188,9 +136,6 @@
 								<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
-									<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-									<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
 								</ul>
 							</article>
 
@@ -253,8 +198,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
-										<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-										<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
