--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#projects">Projects</a></li>
+								<li><a href="#portfolio">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -74,7 +74,7 @@
 							}
 						</style>
 
-						<section class="bg-light" id="portfolio">
+						<article class="bg-light" id="portfolio">
 							<div class="container">
 							<div class="row">
 								<div class="col-lg-12 text-center">
@@ -260,7 +260,7 @@
 
 							</div>
 							</div>
-						</section>
+						</article>
 
 
 						<!-- ======================================================================= -->
