--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/project-gallery.css">
 		<link rel="stylesheet" href="assets/css/modal.css">
-		<link rel="stylesheet" href="assets/css/portfolio.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="assets/js/portfolio.js"></script>
+		<script src="assets/js/project.js"></script>
 	</head>
 	<body class="is-preload">
 
