--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 							</article>
 						
 						<!-- Projects -->
-							<article id="projects" class="bg-light">
+							<article id="projects">
 								<div class="container">
 									<div class="row">
 										<div class="col-lg-12 text-center">
-										<h2 class="section-heading text-uppercase">Projects</h2>
-										<h3 class="section-subheading text-muted">A glimpse of the projects I've been working on</h3>
+										<h2 class="major">Projects</h2>
+										<p>A glimpse of the projects I've been working on</p>
 										</div>
 									</div>
 
