--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
 						
 						<!-- Projects -->
 							<article id="projects">
-								<div class="container">
-									<div class="row">
-										<div class="col-lg-12 text-center">
-										<h2 class="major">Projects</h2>
-										<p>A glimpse of the projects I've been working on</p>
-										</div>
-									</div>
+								<h2 class="major">Projects</h2>
+								<div align="justify"> 
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								</div>
 
+								<div class="container">
+				
 									<div id="projects-items" class="row">
 
 										<div class="col-md-3 col-sm-6 project-item show column dataviz paper dashboard shiny">
