--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<div id="modal" class="modal">
 				<div class="modal-content">
 					<span id="modal-close" class="close">&times;</span>
-					<h2 id="modal-title"></h2>
-					<p id="modal-description"></p>
+					<h2 id="modal-title">Project Title</h2>
+					<p id="modal-description">Project description</p>
 					<img id="modal-image" src="" alt="Project Image">
 					<a id="modal-link1" href="" target="_blank">Link 1</a>
 					<a id="modal-link2" href="" target="_blank">Link 2</a>
