--- a/index.html
+++ b/index.html
@@ -367,43 +367,26 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 			<div id="modal-background" class="modal-background"></div>
 
-		<center>
-			<div class="portfolio-modal" id="project1" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog h-100">
-				  <div class="modal-content">
-					<div class="close-modal" data-dismiss="modal">
-					  <div class="lr">
-						<div class="rl"></div>
-					  </div>
-					</div>
-					<div class="container">
-					  <div class="row">
-						<div class="col-lg-10 mx-auto">
-						  <div class="modal-body">
-							<img src="path/to/project1/thumbnail.jpg" width="180px"></img>
-							<h4>Project 1 title</h4>
-							<p style="max-width: 600px">A web application made to compare genetic maps.</p>
-							<a style="margin-top: 0px" class="btn btn-secondary btn text-uppercase js-scroll-trigger"
-							  href="">Online app</a>
-							<br><br>
-							<div style="text-align: left">
-							  <h6>Description</h6>
-							  <hr>
-							  <p>One-liner about the project</p>
-							  <p>Description of the project</p>
-							  <center><img src="path/to/project1/thumbnail.jpg" width="80%"></img></center>
-							  <h6>Read more</h6>
-							  <hr>
-							  <span>The web application is available at....</span>
-							</div>
-						  </div>
+			<div id="project1" class="modal">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h3 class="modal-title">Project 1 title</h3>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
 						</div>
-					  </div>
+						<div class="modal-body">
+							<img class="img-fluid d-block mx-auto" src="path/to/project1/fullsize.jpg" alt="">
+							<p>Project 1 description</p>
+						</div>
+
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						</div>
 					</div>
-				  </div>
 				</div>
 			</div>
-		</center>
 			
 			
 		<!-- BG -->
